// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentCardGroup > renders correctly with a children 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-2 {
  padding: 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.emotion-2:first-child {
  border-radius: 0.25rem 0.25rem 0 0;
}

.emotion-2:last-child {
  border-radius: 0 0 0.25rem 0.25rem;
}

.emotion-2 .emotion-9 {
  background: #f9f9fa;
}

.emotion-2:hover {
  background: #e9eaeb;
}

.emotion-2:hover .emotion-9 {
  background: none;
}

.emotion-4 {
  height: 100%;
}

.emotion-6 {
  min-width: 0;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
    >
      <a
        class="emotion-2 emotion-3"
        href="http://scaleway.com"
        target="_parent"
      >
        <div
          class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u6p"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              />
            </div>
            <div>
              test
            </div>
          </div>
          <div
            class="emotion-8 emotion-9"
          >
            <svg
              class="styles__dkdfcq0 styles_prominence_default__dkdfcqg styles_disabled_false__dkdfcqf styles_sentiment_neutral__dkdfcq3 styles_size_small__dkdfcqa styles_undefined_compound_34__dkdfcq1i"
              viewBox="0 0 16 16"
            >
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with description 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-2 {
  padding: 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.emotion-2:first-child {
  border-radius: 0.25rem 0.25rem 0 0;
}

.emotion-2:last-child {
  border-radius: 0 0 0.25rem 0.25rem;
}

.emotion-2 .emotion-9 {
  background: #f9f9fa;
}

.emotion-2:hover {
  background: #e9eaeb;
}

.emotion-2:hover .emotion-9 {
  background: none;
}

.emotion-4 {
  height: 100%;
}

.emotion-6 {
  min-width: 0;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
    >
      <a
        class="emotion-2 emotion-3"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u6p"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                title
              </h3>
            </div>
            <p
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              description
            </p>
          </div>
          <div
            class="emotion-8 emotion-9"
          >
            <svg
              class="styles__dkdfcq0 styles_prominence_default__dkdfcqg styles_disabled_false__dkdfcqf styles_sentiment_neutral__dkdfcq3 styles_size_small__dkdfcqa styles_undefined_compound_34__dkdfcq1i"
              viewBox="0 0 16 16"
            >
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with different title and subtitle and with custom titleAs and subtitleAs 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-2 {
  padding: 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.emotion-2:first-child {
  border-radius: 0.25rem 0.25rem 0 0;
}

.emotion-2:last-child {
  border-radius: 0 0 0.25rem 0.25rem;
}

.emotion-2 .emotion-9 {
  background: #f9f9fa;
}

.emotion-2:hover {
  background: #e9eaeb;
}

.emotion-2:hover .emotion-9 {
  background: none;
}

.emotion-4 {
  height: 100%;
}

.emotion-6 {
  min-width: 0;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
    >
      <a
        class="emotion-2 emotion-3"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u6p"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div>
              <h2
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owl uv_m4c9ows uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
              >
                subtitle
              </h2>
              <h1
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                title
              </h1>
            </div>
            <div>
              test
            </div>
          </div>
          <div
            class="emotion-8 emotion-9"
          >
            <svg
              class="styles__dkdfcq0 styles_prominence_default__dkdfcqg styles_disabled_false__dkdfcqf styles_sentiment_neutral__dkdfcq3 styles_size_small__dkdfcqa styles_undefined_compound_34__dkdfcq1i"
              viewBox="0 0 16 16"
            >
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with link target _parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-2 {
  padding: 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.emotion-2:first-child {
  border-radius: 0.25rem 0.25rem 0 0;
}

.emotion-2:last-child {
  border-radius: 0 0 0.25rem 0.25rem;
}

.emotion-2 .emotion-9 {
  background: #f9f9fa;
}

.emotion-2:hover {
  background: #e9eaeb;
}

.emotion-2:hover .emotion-9 {
  background: none;
}

.emotion-4 {
  height: 100%;
}

.emotion-6 {
  min-width: 0;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
    >
      <a
        class="emotion-2 emotion-3"
        href="http://scaleway.com"
        target="_parent"
      >
        <div
          class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u6p"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="emotion-8 emotion-9"
          >
            <svg
              class="styles__dkdfcq0 styles_prominence_default__dkdfcqg styles_disabled_false__dkdfcqf styles_sentiment_neutral__dkdfcq3 styles_size_small__dkdfcqa styles_undefined_compound_34__dkdfcq1i"
              viewBox="0 0 16 16"
            >
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with loading prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-2 {
  padding: 1.5rem;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u6p"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="uv_c2hb451"
            >
              <div
                class="uv_fr4c0td"
                style="--uv_fr4c0t1: 7.5rem;"
              />
              <div
                class="uv_c2hb452"
              />
            </div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="uv_c2hb451"
            >
              <div
                class="uv_fr4c0td"
                style="--uv_fr4c0t1: 7.5rem;"
              />
              <div
                class="uv_c2hb452"
              />
            </div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="uv_c2hb451"
            >
              <div
                class="uv_fr4c0td"
                style="--uv_fr4c0t1: 7.5rem;"
              />
              <div
                class="uv_c2hb452"
              />
            </div>
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-4 emotion-5 uv_c2hb451"
          >
            <div
              class="uv_fr4c0tk"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with required title & hread 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-2 {
  padding: 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.emotion-2:first-child {
  border-radius: 0.25rem 0.25rem 0 0;
}

.emotion-2:last-child {
  border-radius: 0 0 0.25rem 0.25rem;
}

.emotion-2 .emotion-9 {
  background: #f9f9fa;
}

.emotion-2:hover {
  background: #e9eaeb;
}

.emotion-2:hover .emotion-9 {
  background: none;
}

.emotion-4 {
  height: 100%;
}

.emotion-6 {
  min-width: 0;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
    >
      <a
        class="emotion-2 emotion-3"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u6p"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="emotion-8 emotion-9"
          >
            <svg
              class="styles__dkdfcq0 styles_prominence_default__dkdfcqg styles_disabled_false__dkdfcqf styles_sentiment_neutral__dkdfcq3 styles_size_small__dkdfcqa styles_undefined_compound_34__dkdfcq1i"
              viewBox="0 0 16 16"
            >
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with subtitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.emotion-2 {
  padding: 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.emotion-2:first-child {
  border-radius: 0.25rem 0.25rem 0 0;
}

.emotion-2:last-child {
  border-radius: 0 0 0.25rem 0.25rem;
}

.emotion-2 .emotion-9 {
  background: #f9f9fa;
}

.emotion-2:hover {
  background: #e9eaeb;
}

.emotion-2:hover .emotion-9 {
  background: none;
}

.emotion-4 {
  height: 100%;
}

.emotion-6 {
  min-width: 0;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
    >
      <a
        class="emotion-2 emotion-3"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u6p"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div>
              <h5
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owl uv_m4c9ows uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
              >
                subtitle
              </h5>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="emotion-8 emotion-9"
          >
            <svg
              class="styles__dkdfcq0 styles_prominence_default__dkdfcqg styles_disabled_false__dkdfcqf styles_sentiment_neutral__dkdfcq3 styles_size_small__dkdfcqa styles_undefined_compound_34__dkdfcq1i"
              viewBox="0 0 16 16"
            >
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
